--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -4,6 +4,26 @@
   display: none;
 }
 
-#wall .tag-1 #tag-2 {
+#tag-2 {
   display: none;
+}
+
+tag-3 {
+  
+}
+
+tag-4 {
+  
+}
+
+tag-5 {
+  
+}
+
+tag-6 {
+  
+}
+
+tag-7 {
+  
 }
