--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -4,26 +4,26 @@
   display: none;
 }
 
-#tag-2 {
+#wall div#tag-2 {
   display: none;
 }
 
-tag-3 {
-  
+div#wall #tag-3.slick.wicked {
+  display: none;
 }
 
-tag-4 {
-  
+#wall .parent #tag-4 {
+  display: none;
 }
 
-tag-5 {
-  
+div#wall div.parent #tag-5.slick {
+  display: none;
 }
 
-tag-6 {
-  
+body div#wall div.parent div:last-child div#tag-6 {
+  display: none;
 }
 
-tag-7 {
-  
+body div#wall div.parent div:first-child > div#tag-7.slick {
+    display: none;
 }
